version 0.8.5 --

  - fix bug in main.cc (| rather than ||).  Thanks to Roman Neuhauser!
    [vanRijn]

  - fix bug in bbkeys.hh--increasing MaxInstructions to 100 for cthulhain
    [vanRijn]

  - fix in bbkeys.cc -- XUngrabKey changed to use same call to find what
    screen we're on as the XGrabKey call 
    [vanRijn]

version 0.8.4 --

  - add a sanity check to the removeWindow function. Basically, blackbox tells
    bbkeys when a window disappears, or is removed. If the window being
    removed was the last window blackbox specified as having the input focus,
    bbkeys now resets what it thinks has the input focus. This prevents the
    bug reproducable by iconifying the last window on a workspace, and then
    trying to maximize "nothing". [xOr]

  - cleaning up build again.  Rather than having 200 -DDEFINE_ statements
    in our compile lines, we use config.h (like normal people).  =:)  This
    very well may break stuff, but it looks good thus far.... [vanRijn]

  - adding AM_MAINTAINER_MODE to stop the ever-annoying "here, let me run
    aclocal for you again!!" idiocy of automake and friends [vanRijn]

  - fixing things for multi-head displays--replacing
    "getScreenInfo(0)->getRootWindow()," with
    "getCurrentScreenInfo()->getRootWindow(),"  So yes, bbkeys now has
    multi-head support.  Sort of.  You need to have a separate instance of
    bbkeys running against each head ("bbkeys -display :1"), etc.  cat
    complaints >> /dev/null.... [vanRijn]

  - removing kludgy C command-line configurator with much-improved perl script
    from Damien Tougas (thanks!!!) [vanRijn]

  - changing bbkeys.cc to look for bbkeysconf.pl rather than bbkeysConfigC
    [vanRijn]

  - removing showAllWorkspaces from bbkeys.{bb,nobb} config file and making it
    an additional keybinding.  This allows two different ways of showing all
    open windows and navigating through them--one keybinding for the regular